# genSurvPy

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHECKLIST.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  fix_recommendations.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: auto-upgrade-pyproject.yml  bump-version.yml  ci.yml  docs.yml  publish.yml  sphinx-docs.yaml  test.yml  update-poetry.yml  version-check.yml
benchmarks/: README.md  test_cmm_benchmark.py  test_cphm_benchmark.py  test_mixture_benchmark.py  test_piecewise_benchmark.py  test_tdcm_benchmark.py  test_validation_benchmark.py
docs/: requirements.txt
docs/gh_conf/: conf.py
docs/source/: algorithms.md  bibliography.md  changelog.md  conf.py  contributing.md  gen_surv.rst  getting_started.md  index.md  modules.md  modules.rst  rtd.md  theory.md  troubleshooting.md  usage.md
docs/source/_static/: custom.css
docs/source/api/: index.md
docs/source/examples/: cmm.md  index.md  tdcm.md  thmm.md
docs/source/tutorials/: basic_usage.md  index.md
examples/: run_aft.py  run_aft_weibull.py  run_cmm.py  run_competing_risks.py  run_cphm.py  run_tdcm.py  run_thmm.py
examples/notebooks/: cmm.ipynb  tdcm.ipynb  thmm.ipynb
gen_surv/: __init__.py  _covariates.py  _validation.py  aft.py  bivariate.py  censoring.py  cli.py  cmm.py  competing_risks.py  cphm.py  export.py  integration.py  interface.py  mixture.py  piecewise.py  sklearn_adapter.py  summary.py  tdcm.py  thmm.py  validate.py  validation.py  visualization.py
gen_surv-stubs/gen_surv/: __main__.pyi  bivariate.pyi  censoring.pyi  cmm.pyi  interface.pyi  tdcm.pyi  validate.pyi
scripts/: check_version_match.py
stubs/gen_surv/: __init__.pyi  aft.pyi  cphm.pyi  interface.pyi  thmm.pyi  validate.pyi
tests/: __init__.py  conftest.py  test_aft.py  test_aft_property.py  test_api_contract.py  test_bivariate.py  test_censoring.py  test_cli.py  test_cli_integration.py  test_cli_snapshot.py  test_cli_visualize_integration.py  test_cmm.py  test_competing_risks.py  test_cphm.py  test_export.py  test_generate_deterministic.py  test_generate_export_integration.py  test_generate_regression.py  test_integration_sksurv.py  test_interface.py  test_mixture.py  test_perf_smoke.py  test_piecewise.py  test_piecewise_functions.py  test_sklearn_adapter.py  test_summary.py  test_summary_extra.py  test_summary_more.py  test_tdcm.py  test_thmm.py  test_validate.py  test_version.py  test_visualization.py
tests/baselines/: cli_help.txt
