[tool.poetry]
name = "gen_surv"
version = "1.0.10"
description = "A Python package for simulating survival data, inspired by the R package genSurv"
authors = ["Diogo Ribeiro <diogo.debastos.ribeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gen_surv" }]
homepage = "https://github.com/DiogoRibeiro7/genSurvPy"
repository = "https://github.com/DiogoRibeiro7/genSurvPy"
documentation = "https://gensurvpy.readthedocs.io/en/latest/"
keywords = ["survival-analysis", "simulation", "cox-model", "markov-model", "time-dependent", "statistics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.3.4"
pandas = "^2.3.3"
typer = "^0.19.2"
click = "^8.3.0"
matplotlib = "^3.10.7"
lifelines = "^0.30.0"
pyarrow = "^21.0.0"
pyreadr = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-benchmark = "^5.1.0"
python-semantic-release = "^10.4.1"
mypy = "^1.18.2"
invoke = "^2.2.1"
hypothesis = "^6.142.1"
tomli = "^2.3.0"
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^6.1.0"
scikit-survival = "^0.25.0"
pre-commit = "^4.3.0"

[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "python-semantic-release",
    "mypy",
    "invoke",
    "hypothesis",
    "tomli",
    "black",
    "isort",
    "flake8",
    "scikit-survival",
    "pre-commit",
]

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.0"
sphinx-rtd-theme = ">=1.3,<4.0"
myst-parser = ">=1.0.0,<4.0.0"
sphinx-autodoc-typehints = ">=1.24,<3.0"
sphinx-copybutton = "^0.5.2"
sphinx-design = ">=0.5,<0.7"
linkify-it-py = ">=2.0"

[tool.pytest.ini_options]
markers = [
    "slow: slow performance tests",
]

[tool.poetry.scripts]
gen_surv = "gen_surv.cli:app"

[tool.semantic_release]
version_source = "tag"
version_variable = ["pyproject.toml:tool.poetry.version"]
commit_version_number = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
branch = "main"
build_command = ""

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "W291", "W293", "W391", "E402", "E302", "E305"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "typer",
    "typer.models",
    "matplotlib",
    "matplotlib.*",
    "lifelines",
    "lifelines.*",
    "sklearn",
    "sklearn.*",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "scipy",
    "scipy.*",
    "pyreadr",
    "sksurv",
    "sksurv.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
